compiler/tests/fixtures/type_err/map_set_value_mismatch.yb
pub main() -> Int {
  m := {"a": 1}
  m.set("a", "oops")
  0
}
